--- a/css/popup.css
+++ b/css/popup.css
@@ -6,7 +6,7 @@
     display: none;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url('../img/page-privacy.jpg') right;
-    z-index: 1;
+    z-index: 9;
     position: fixed;
     bottom: 10%;
     left: 3%;
@@ -49,7 +49,7 @@
 }
 .modal-privacidade{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    position: absolute;
+    position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
@@ -58,7 +58,7 @@
     width: 70%;
     min-height: 500px;
     height: 90%;
-    z-index: 9;
+    z-index: 9999;
     display: none;
     background-color: white;
     border-radius: 5px;
