--- a/css/popup.css
+++ b/css/popup.css
@@ -2,6 +2,10 @@
     margin: 0;
     padding: 0;
 }
+hr{
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+}
 .modal-politica{
     display: none;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
