--- a/css/popup.css
+++ b/css/popup.css
@@ -1,14 +1,15 @@
-*{
-    margin: 0;
-    padding: 0;
-}
 hr{
     margin-top: 0 !important;
     margin-bottom: 0 !important;
 }
+#includedContent{
+    color: black;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: normal;
+    font-size: medium;
+}
 .modal-politica{
     display: none;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url('../img/page-privacy.jpg') right;
     z-index: 9;
     position: fixed;
@@ -20,9 +21,7 @@ hr{
 }
 .fechar-politica{
     color: red;
-    padding: 1px 8px;
-    border: 1px solid red;
-    border-radius: 50px;
+    padding: 15px 10px; 
     cursor: pointer;
     height: 25px;
 }
@@ -54,14 +53,10 @@ hr{
 .modal-privacidade{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     position: fixed;
-    top: 0;
-    bottom: 0;
     left: 0;
     right: 0;
-    margin: auto;
+    margin: 20px auto;
     width: 70%;
-    min-height: 500px;
-    height: 90%;
     z-index: 9999;
     display: none;
     background-color: white;
@@ -77,7 +72,7 @@ hr{
     justify-content: space-between;
 }
 .body-privacidade{
-    height: 80%;
+    max-height: 650px;
     overflow-y: auto;
     overflow-x: hidden;
     padding: 30px;
@@ -88,28 +83,26 @@ hr{
 }
 /* Smartphones (600px para baixo) */
 @media only screen and (max-width: 600px) {
-    .modal-politica{
-        width: 300px !important;
-    }
+    
 }
 @media only screen and (max-height: 600px) {
     .body-privacidade{
-        height: 65%;
+        max-height: 150px;
     }
 }
 @media only screen and (min-height: 600px) {
     .body-privacidade{
-        height: 70%;
+        max-height: 350px;
     }
 }
 @media only screen and (min-height: 750px) {
     .body-privacidade{
-        height: 75%;
+        max-height: 500px;
     }
 }
 @media only screen and (min-height: 900px) {
     .body-privacidade{
-        height: 80%;
+        max-height: 650px;
     }
 }
 /* Dispositivos um pouco maiores, mas ainda pequenos (Pequenos Tablets e Smartphones + largos, 600px para cima) */
