--- a/css/popup.css
+++ b/css/popup.css
@@ -53,6 +53,7 @@ hr{
 .modal-privacidade{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     position: fixed;
+    top: 0;
     left: 0;
     right: 0;
     margin: 20px auto;
